--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /D424Weightlifting/.vs/D424Weightlifting/FileContentIndex/cb5b8cb6-9e07-4fe5-bb68-b4410ca8b888.vsidx
 /D424Weightlifting/.vs/D424Weightlifting/FileContentIndex/d73b67e6-2ded-4e40-8e7e-fdc4dcaf2780.vsidx
 /D424Weightlifting/.vs/D424Weightlifting/FileContentIndex/0df9ca64-67a7-4c45-8c82-7382c22587a7.vsidx
+/.vs/The5Lifts/FileContentIndex/3713ba46-3912-4c37-aab1-aa5c74bea816.vsidx
