--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /D424Weightlifting/.vs/D424Weightlifting/FileContentIndex/d73b67e6-2ded-4e40-8e7e-fdc4dcaf2780.vsidx
 /D424Weightlifting/.vs/D424Weightlifting/FileContentIndex/0df9ca64-67a7-4c45-8c82-7382c22587a7.vsidx
 /.vs/The5Lifts/FileContentIndex/3713ba46-3912-4c37-aab1-aa5c74bea816.vsidx
+/.vs/The5Lifts/FileContentIndex/38693501-3e99-4b4e-a321-6a8dc000c9f1.vsidx
+/.vs/The5Lifts/FileContentIndex/bce53d15-3678-4827-99bb-01a2a6e91ec7.vsidx
