--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /.vs/The5Lifts/FileContentIndex/3713ba46-3912-4c37-aab1-aa5c74bea816.vsidx
 /.vs/The5Lifts/FileContentIndex/38693501-3e99-4b4e-a321-6a8dc000c9f1.vsidx
 /.vs/The5Lifts/FileContentIndex/bce53d15-3678-4827-99bb-01a2a6e91ec7.vsidx
+/.vs/The5Lifts/FileContentIndex/d9ca765e-6bf5-4f39-a08e-a74554f6d4de.vsidx
