--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /.vs/The5Lifts/FileContentIndex/38693501-3e99-4b4e-a321-6a8dc000c9f1.vsidx
 /.vs/The5Lifts/FileContentIndex/bce53d15-3678-4827-99bb-01a2a6e91ec7.vsidx
 /.vs/The5Lifts/FileContentIndex/d9ca765e-6bf5-4f39-a08e-a74554f6d4de.vsidx
+/.vs/The5Lifts/FileContentIndex/9dbf78ad-6bf0-4a7f-b3f5-34dd3d863f0f.vsidx
+/.vs/The5Lifts/FileContentIndex
